--- a/Mirko_v2/Mirko_v2.WindowsPhone/Pages/PivotPage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Pages/PivotPage.xaml
@@ -8,7 +8,8 @@
     xmlns:controls="using:Mirko_v2.Controls"
     mc:Ignorable="d"
     d:DesignHeight="300"
-    d:DesignWidth="400">
+    d:DesignWidth="400"
+    DataContext="{Binding Main, Mode=OneWay, Source={StaticResource Locator}}">
 
     <UserControl.Resources>
         <DataTemplate x:Key="AppBar">
