Suspension works wonderfully (at least for PivotPage).

--- a/Mirko_v2/Mirko_v2.WindowsPhone/Pages/PivotPage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Pages/PivotPage.xaml
@@ -152,6 +152,7 @@
                                      AppBar="{Binding ElementName=AppBar}"
                                      ScrollingDown="ListView_ScrollingDown"
                                      ScrollingUp="ListView_ScrollingUp"
+                                     Loaded="ListView_Loaded"
                                      ItemsSource="{Binding MirkoEntries}"
                                      ItemContainerStyle="{StaticResource ListViewItemStretchNoTilt}"
                                      VirtualizingStackPanel.VirtualizationMode="Recycling"
