Figure out appbars. Improve NavigationService.

--- a/Mirko_v2/Mirko_v2.WindowsPhone/HostPage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/HostPage.xaml
@@ -24,14 +24,7 @@
                             Margin="0,20,0,0"
                             x:Name="AppHeader"/>
         <Frame Grid.Row="1" 
-               x:Name="MainFrame"
-               Loaded="MainFrame_Loaded"/>
-    </Grid>
-    
-    <Page.BottomAppBar>
-        <CommandBar x:Name="AppBar">           
-
-        </CommandBar>
-    </Page.BottomAppBar>
+               x:Name="MainFrame"/>
+    </Grid>  
     
 </Page>
