Add support for hot entries. Comments don't work.

--- a/Mirko_v2/Mirko_v2.WindowsPhone/Resources/Converters.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Resources/Converters.xaml
@@ -24,5 +24,7 @@
     <converters:BoolInverter x:Key="BoolInverter" />
     <converters:YouTubeApp x:Key="YouTubeApp" />
     <converters:CountToBool x:Key="CountToBool" />
+    <converters:HotTimeSpanStringConverter x:Key="HotTimeSpanStringConverter" />
+    <converters:HotTimeSpanIndexConverter x:Key="HotTimeSpanIndexConverter" />
 
 </ResourceDictionary>
