--- a/Mirko_v2/Mirko_v2.WindowsPhone/Pages/PivotPage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Pages/PivotPage.xaml
@@ -106,40 +106,88 @@
             </Grid>
         </Popup>
 
-        <Popup x:Name="HotEntriesPopup"
-               VerticalOffset="108">
+        <Popup x:Name="TimeSpanIndicatorPopup"
+               VerticalOffset="-40">
 
             <Popup.Resources>
-                <Storyboard x:Name="HotPopupFadeIn">
-                    <DoubleAnimation Storyboard.TargetName="HotPopupGrid"
+                <Storyboard x:Name="TimeSpanIndicatorFadeIn">
+                    <DoubleAnimation Storyboard.TargetName="TimeSpanIndicatorGrid"
                                      Storyboard.TargetProperty="Opacity"
                                      To="{StaticResource AppHeaderOpacity}"
                                      Duration="0:0:0.2" />
                 </Storyboard>
 
-                <Storyboard x:Name="HotPopupFadeOut">
-                    <DoubleAnimation Storyboard.TargetName="HotPopupGrid"
+                <Storyboard x:Name="TimeSpanIndicatorFadeOut">
+                    <DoubleAnimation Storyboard.TargetName="TimeSpanIndicatorGrid"
                                      Storyboard.TargetProperty="Opacity"
                                      To="0.0"
                                      Duration="0:0:0.2"/>
                 </Storyboard>
             </Popup.Resources>
 
-            <Grid x:Name="HotPopupGrid"
+            <Grid x:Name="TimeSpanIndicatorGrid"
                   Background="Transparent"
                   Opacity="{StaticResource AppHeaderOpacity}"
-                  Height="49">
-                <ComboBox Style="{StaticResource ComboBoxStyle}">
-                    <ComboBoxItem Content="z ostatniej godziny"
-                                  Tag="1" />
-                    <ComboBoxItem Content="z ostatnich 3 godzin"
-                                  Tag="3" />
-                    <ComboBoxItem Content="z ostatnich 6 godzin"
-                                  Tag="6" />
-                    <ComboBoxItem Content="z ostatnich 12 godzin"
-                                  Tag="12"/>
-                </ComboBox>
+                  Height="49"
+                  Tapped="TimeSpanIndicatorGrid_Tapped">
+                <TextBlock Foreground="{ThemeResource HashtagForeground}"
+                           Margin="75,0,0,0"
+                           FontSize="17"
+                           Text="{Binding HotTimeSpan, Converter={StaticResource HotTimeSpanStringConverter}}">                    
+                </TextBlock>
             </Grid>
+        </Popup>
+       
+        
+        <Popup x:Name="TimeSpanSelectionPopup"
+               VerticalOffset="-220"
+               Loaded="TimeSpanSelectionPopup_Loaded"
+               Unloaded="TimeSpanSelectionPopup_Unloaded">
+
+            <ListView x:Name="TimeSpanSelectionListBox"
+                      Background="Black"
+                      Canvas.ZIndex="1"
+                      Opacity="0.85"
+                      HorizontalAlignment="Center"
+                      VerticalAlignment="Center"
+                      SelectionMode="Single"
+                      SelectionChanged="TimeSpanSelectionListBox_SelectionChanged"
+                      Loaded="TimeSpanSelectionListBox_Loaded"
+                      SelectedIndex="{Binding HotTimeSpan, Converter={StaticResource HotTimeSpanIndexConverter}, Mode=TwoWay}"
+                      ItemContainerStyle="{StaticResource ListViewItemStretchNoTilt}"
+                      ScrollViewer.VerticalScrollBarVisibility="Disabled">
+
+                <i:Interaction.Behaviors>
+                    <core:EventTriggerBehavior EventName="SelectionChanged">
+                        <core:InvokeCommandAction Command="{Binding HotTimeSpanChanged}" />
+                    </core:EventTriggerBehavior>
+                </i:Interaction.Behaviors>
+                
+                <ListView.Header>
+                    <Rectangle Height="300"
+                               Fill="Transparent" />
+                </ListView.Header>
+                
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock Text="{Binding}"
+                                   Margin="0,0,0,40"
+                                   VerticalAlignment="Center"
+                                   HorizontalAlignment="Center"
+                                   Typography.Kerning="True"
+                                   FontSize="24"/>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+
+                <ListView.Items>
+                    <x:String>z ostatniej godziny</x:String>
+                    <x:String>z ostatnich 3 godzin</x:String>
+                    <x:String>z ostatnich 6 godzin</x:String>
+                    <x:String>z ostatnich 12 godzin</x:String>
+                </ListView.Items>
+
+            </ListView>
+
         </Popup>
 
         <Pivot x:Name="MainPivot"
@@ -148,6 +196,7 @@
                Margin="0,-132.5,0,0"
                HorizontalAlignment="Stretch"
                SelectedIndex="{Binding CurrentPivotItem, Mode=TwoWay}"
+               SelectionChanged="MainPivot_SelectionChanged"
 			   Style="{StaticResource CustomPivotStyle}" 
                BorderBrush="{ThemeResource PivotHeaderBackground}">
 
@@ -158,7 +207,6 @@
                 Header="mirko"
                 Tag="0">
                 <controls:ListViewEx x:Name="MirkoListView"
-                                     AppBar="{Binding ElementName=AppBar}"
                                      ScrollingDown="ListView_ScrollingDown"
                                      ScrollingUp="ListView_ScrollingUp"
                                      Loaded="ListView_Loaded"
@@ -188,15 +236,19 @@
             </PivotItem>
 
             <!--Pivot item two-->
-            <PivotItem
-                x:Uid="HotPivotItem"
-                Margin="10,-140,0,0"
-                Header="gorące"
-                Tag="1">
-                <ListView x:Name="HotListView"
-                          ItemsSource="{Binding HotEntries}"
-                          ItemContainerStyle="{StaticResource ListViewItemStretchNoTilt}"
-                          IsItemClickEnabled="False">
+            <PivotItem x:Uid="HotPivotItem"
+                       Margin="10,-140,0,0"
+                       Header="gorące"
+                       Tag="1">
+                <controls:ListViewEx x:Name="HotListView"
+                                     ScrollingDown="ListView_ScrollingDown"
+                                     ScrollingUp="ListView_ScrollingUp"
+                                     Loaded="ListView_Loaded"
+                                     ItemsSource="{Binding HotEntries}"
+                                     ItemContainerStyle="{StaticResource ListViewItemStretchNoTilt}"
+                                     VirtualizingStackPanel.VirtualizationMode="Recycling"
+                                     IsItemClickEnabled="False"
+                                     Tag="LV1">
 
                     <ListView.ItemTemplate>
                         <DataTemplate>
@@ -205,7 +257,7 @@
                     </ListView.ItemTemplate>
 
                     <ListView.Header>
-                        <Rectangle Height="185"
+                        <Rectangle Height="220"
                                    Fill="Transparent" />
                     </ListView.Header>
 
@@ -214,7 +266,7 @@
                                    Fill="Transparent" />
                     </ListView.Footer>
 
-                </ListView>
+                </controls:ListViewEx>
 
             </PivotItem>
 
