Add no entries message.

--- a/Mirko_v2/Mirko_v2.WindowsPhone/Pages/PivotPage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Pages/PivotPage.xaml
@@ -257,8 +257,19 @@
                     </ListView.ItemTemplate>
 
                     <ListView.Header>
-                        <Rectangle Height="220"
+                        <StackPanel>
+                            <Rectangle Height="220"
                                    Fill="Transparent" />
+
+                            <TextBlock x:Name="NoItemsTB"
+                                       Margin="0,8,0,0"
+                                       Text="Brak wpisów."
+                                       FontSize="18"
+                                       FontWeight="Light"
+                                       Foreground="LightGray"
+                                       Visibility="{Binding HotEntries.HasNoItems, Converter={StaticResource BoolToVisibility}}"/>
+
+                        </StackPanel>
                     </ListView.Header>
 
                     <ListView.Footer>
