Add support for loading comments in hot entries.

--- a/Mirko_v2/Mirko_v2.WindowsPhone/Pages/EntryPage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Pages/EntryPage.xaml
@@ -30,7 +30,8 @@
                 <Rectangle x:Name="HeaderSpacer"
                            Fill="Transparent"
                            Height="140" />
-                <controls:Entry DataContext="{Binding}"/>
+                <controls:Entry DataContext="{Binding}"
+                                IsHot="{Binding Main.SelectedEntryIsHot, Mode=OneWay, Source={StaticResource Locator}}"/>
             </StackPanel>
         </ListView.Header>
 
