--- a/Mirko_v2/Mirko_v2.WindowsPhone/Pages/PivotPage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Pages/PivotPage.xaml
@@ -252,7 +252,7 @@
 
                     <ListView.ItemTemplate>
                         <DataTemplate>
-                            <controls:Entry IsHot="True" />
+                            <controls:FullEntry IsHot="True" />
                         </DataTemplate>
                     </ListView.ItemTemplate>
 
