--- a/Mirko_v2/Mirko_v2.WindowsPhone/Controls/FullEntry.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Controls/FullEntry.xaml
@@ -10,7 +10,8 @@
     xmlns:core="using:Microsoft.Xaml.Interactions.Core"
     mc:Ignorable="d"
     d:DesignHeight="300"
-    d:DesignWidth="400">
+    d:DesignWidth="400"
+    x:Name="root">
     
     <UserControl.Resources>
         <DataTemplate x:Key="Block_Entry">
@@ -54,7 +55,8 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         
-        <local:Entry Grid.Row="0" />
+        <local:Entry Grid.Row="0"
+                     IsHot="{Binding ElementName=root, Path=IsHot}"/>
         
         <Border x:Name="CommentCountBorder"
                 Grid.Row="1"
@@ -62,12 +64,12 @@
                 BorderThickness="0"
                 Margin="40,4,10,0"
                 Tapped="CommentCountBorder_Tapped"
-                Visibility="{Binding Comments.Count, Converter={StaticResource CountToVisibility}}">           
+                Visibility="{Binding Data.CommentCount, Converter={StaticResource CountToVisibility}}">           
             
             <TextBlock Foreground="{ThemeResource CommentsBarForeground}"
                        Margin="12,4,0,4"
                        FontSize="13.0">
-                <Run Text="POKAŻ KOMENTARZE (" /><Run Text="{Binding Comments.Count}" Foreground="{ThemeResource CommentsBarCountForeground}"/><Run Text=")" />
+                <Run Text="POKAŻ KOMENTARZE (" /><Run Text="{Binding Data.CommentCount}" Foreground="{ThemeResource CommentsBarCountForeground}"/><Run Text=")" />
             </TextBlock>
             
         </Border>
