--- a/Mirko_v2/Mirko_v2.WindowsPhone/Controls/CachedImage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Controls/CachedImage.xaml
@@ -7,10 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     d:DesignHeight="300"
-    d:DesignWidth="400"
-    
-    MaxHeight="200"
-    MaxWidth="200">
+    d:DesignWidth="400">
 
     <UserControl.Resources>
         <Storyboard x:Name="ImageFadeIn">
