--- a/Mirko_v2/Mirko_v2.WindowsPhone/Controls/AppHeader.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Controls/AppHeader.xaml
@@ -10,7 +10,7 @@
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400"
-    Height="60"
+    Height="80"
     x:Name="AppHeaderControl"
     DataContext="{Binding Notifications, Mode=OneWay, Source={StaticResource Locator}}">
        
@@ -26,7 +26,7 @@
         
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="*"  />
+            <RowDefinition Height="20"  />
         </Grid.RowDefinitions>
 
         <Grid x:Name="LogoGrid"
@@ -308,17 +308,21 @@
         
         <Rectangle x:Name="Gradient"
                    Grid.Row="1"
-                   Height="50"
-                   Grid.ColumnSpan="2">
-
+                   Canvas.ZIndex="1"
+                   Grid.ColumnSpan="2"
+                   Visibility="Collapsed">
+            
             <Rectangle.Fill>
-                <LinearGradientBrush StartPoint="0.5, 0"
-                                     EndPoint="0.5, 1">
-                    <GradientStop Color="{Binding ElementName=AppHeaderControl, Path=Background}" Offset="0"/>
-                    <GradientStop Color="Transparent" Offset="1"/>
+                <LinearGradientBrush StartPoint="0.5,0" 
+                                     EndPoint="0.5,1"
+                                     SpreadMethod="Reflect" 
+                                     ColorInterpolationMode="SRgbLinearInterpolation">
+                    <GradientStop Color="#FF000000" Offset="0"/>
+                    <GradientStop Color="#00FFFFFF" Offset="1"/>
                 </LinearGradientBrush>
             </Rectangle.Fill>
-            
+
+
         </Rectangle>
         
     </Grid>
