Enable large embed for flipview.

--- a/Mirko_v2/Mirko_v2.WindowsPhone/Pages/HashtagFlipPage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Pages/HashtagFlipPage.xaml
@@ -53,6 +53,7 @@
                                            Fill="Transparent"
                                            Height="140" />
                                 <controls:Entry DataContext="{Binding}"
+                                                LargeEmbed="True"
                                                 IsTapEnabled="False"/>
                             </StackPanel>
                         </ListView.Header>
