--- a/Mirko_v2/Mirko_v2.WindowsPhone/Pages/HashtagEntriesPage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Pages/HashtagEntriesPage.xaml
@@ -45,8 +45,13 @@
             <Grid x:Name="PopupGrid"
                   Opacity="{StaticResource AppHeaderOpacity}"
                   Background="#67a7d2"
-                  Tapped="NewEntriesPopup_Tapped"
                   Height="49">
+
+                <i:Interaction.Behaviors>
+                    <core:EventTriggerBehavior EventName="Tapped">
+                        <core:InvokeCommandAction Command="{Binding AddNewTaggedEntries}" />
+                    </core:EventTriggerBehavior>
+                </i:Interaction.Behaviors>
 
                 <TextBlock x:Name="PopupTB"
                            Style="{StaticResource BaseTextBlockStyle}"
