Add a little margin in EntryEmbed.

--- a/Mirko_v2/Mirko_v2.WindowsPhone/Controls/Entry.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Controls/Entry.xaml
@@ -185,6 +185,7 @@
               Visibility="{Binding Path=EmbedVM.EmbedData, Converter={StaticResource NullToVisibility}}">
             
             <controls:EntryEmbed x:Name="EmbedPreview"
+                                 Margin="0,3,0,0"
                                  MaxHeight="250"
                                  MaxWidth="250"
                                  HorizontalAlignment="Left"
