--- a/Mirko_v2/Mirko_v2.WindowsPhone/Pages/ConversationsPage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Pages/ConversationsPage.xaml
@@ -1,8 +1,8 @@
-﻿<Page
-    x:Class="Mirko_v2.ConversationsPage"
+﻿<UserControl
+    x:Class="Mirko_v2.Pages.ConversationsPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Mirko_v2"
+    xmlns:local="using:Mirko_v2.Pages"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:utils="using:Mirko_v2.Utils"
@@ -11,8 +11,7 @@
     xmlns:core="using:Microsoft.Xaml.Interactions.Core"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
-    DataContext="{Binding Messages, Mode=OneWay, Source={StaticResource Locator}}"
-    utils:PageOrientation.SupportedOrientations="Portrait">
+    DataContext="{Binding Messages, Mode=OneWay, Source={StaticResource Locator}}">
 
     <i:Interaction.Behaviors>
         <core:EventTriggerBehavior EventName="Unloaded">
@@ -32,8 +31,6 @@
         <StackPanel Grid.Row="0"
                     Canvas.ZIndex="1"
                     Margin="0,0,0,12">
-            <controls:AppHeader x:Name="AppHeader"
-                                Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"/>
             <Rectangle Height="1"
                        Opacity="{StaticResource AppBarOpacity}"
                        Fill="{StaticResource PivotHeaderBackground}" />
@@ -111,7 +108,7 @@
                                         <core:InvokeCommandAction Command="{Binding LoadLastMessageCommand}" />
                                     </core:EventTriggerBehavior>
                                 </i:Interaction.Behaviors>
-                                
+
                             </TextBlock>
 
                         </Grid>
@@ -122,4 +119,4 @@
             </ListView>
         </Grid>
     </Grid>
-</Page>
+</UserControl>
