--- a/Mirko_v2/Mirko_v2.WindowsPhone/Pages/LoginPage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Pages/LoginPage.xaml
@@ -1,19 +1,17 @@
-﻿<Page
-    x:Class="Mirko_v2.LoginPage"
+﻿<UserControl
+    x:Class="Mirko_v2.Pages.LoginPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Mirko_v2"
+    xmlns:local="using:Mirko_v2.Pages"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:utils="using:Mirko_v2.Utils"
-    xmlns:i="using:Microsoft.Xaml.Interactivity"
-    xmlns:core="using:Microsoft.Xaml.Interactions.Core"
     mc:Ignorable="d"
+    d:DesignHeight="300"
+    d:DesignWidth="400"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
-    utils:PageOrientation.SupportedOrientations="Portrait"
     DataContext="{Binding Login, Mode=OneWay, Source={StaticResource Locator}}">
 
-    <Page.Resources>
+    <UserControl.Resources>
         <Flyout x:Key="ErrorFlyout">
             <TextBlock TextWrapping="Wrap"
                        Margin="19.5,9.5,19,0"
@@ -235,7 +233,7 @@
                 </Setter.Value>
             </Setter>
         </Style>
-    </Page.Resources>
+    </UserControl.Resources>
 
     <Grid x:Name="LayoutRoot"
           Margin="0,32,0,0">
@@ -323,14 +321,4 @@
 
         </Grid>
     </Grid>
-
-    <Page.BottomAppBar>
-        <CommandBar IsSticky="True">
-            <AppBarButton x:Name="LoginButton"
-                          Icon="Accept"
-                          Label="zaloguj"
-                          IsEnabled="False"
-                          Click="LoginButton_Click"/>
-        </CommandBar>
-    </Page.BottomAppBar>
-</Page>
+</UserControl>
