--- a/Mirko_v2/Mirko_v2.WindowsPhone/Pages/SettingsPage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Pages/SettingsPage.xaml
@@ -1,26 +1,26 @@
-﻿<Page
-    x:Class="Mirko_v2.SettingsPage"
+﻿<UserControl
+    x:Class="Mirko_v2.Pages.SettingsPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Mirko_v2"
+    xmlns:local="using:Mirko_v2.Pages"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:utils="using:Mirko_v2.Utils"
     xmlns:i="using:Microsoft.Xaml.Interactivity"
     xmlns:core="using:Microsoft.Xaml.Interactions.Core"
     mc:Ignorable="d"
+    d:DesignHeight="300"
+    d:DesignWidth="400"
     Background="{ThemeResource SettingsBackground}"
-    DataContext="{Binding Settings, Mode=OneWay, Source={StaticResource Locator}}"
-    utils:PageOrientation.SupportedOrientations="Portrait">
-
-    <Page.Resources>
+    DataContext="{Binding Settings, Mode=OneWay, Source={StaticResource Locator}}">
+    
+    <UserControl.Resources>
         <DataTemplate x:Key="ToggleSwitchTemplate">
             <TextBlock Text="{Binding}"
                        FontSize="20"
                        TextWrapping="Wrap"
                        FontFamily="Segoe"/>
         </DataTemplate>
-    </Page.Resources>
+    </UserControl.Resources>
 
     <Grid x:Name="LayoutRoot"
           Margin="0,0,0,0">
@@ -164,14 +164,14 @@
                                   Margin="0,-12,0,0"
                                   ItemsSource="{Binding YouTubeApps}"
                                   SelectedItem="{Binding SelectedYouTubeApp, Mode=OneWay, Converter={StaticResource YouTubeApp}}">
-                            
+
                             <i:Interaction.Behaviors>
                                 <core:EventTriggerBehavior EventName="SelectionChanged">
                                     <core:InvokeCommandAction Command="{Binding YouTubeAppChanged}"
                                                               CommandParameter="{Binding ElementName=YoutubeApp, Path=SelectedIndex}"/>
                                 </core:EventTriggerBehavior>
                             </i:Interaction.Behaviors>
-                            
+
                         </ComboBox>
                     </Grid>
 
@@ -179,9 +179,4 @@
             </StackPanel>
         </ScrollViewer>
     </Grid>
-
-    <Page.BottomAppBar>
-        <CommandBar ClosedDisplayMode="Minimal">
-        </CommandBar>
-    </Page.BottomAppBar>
-</Page>
+</UserControl>
