--- a/Mirko_v2/Mirko_v2.WindowsPhone/Pages/LoginPage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Pages/LoginPage.xaml
@@ -6,8 +6,6 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    d:DesignHeight="300"
-    d:DesignWidth="400"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
     DataContext="{Binding Login, Mode=OneWay, Source={StaticResource Locator}}">
 
@@ -234,91 +232,44 @@
             </Setter>
         </Style>
     </UserControl.Resources>
-
-    <Grid x:Name="LayoutRoot"
-          Margin="0,32,0,0">
-
-        <Grid.ChildrenTransitions>
-            <TransitionCollection>
-                <EntranceThemeTransition/>
-            </TransitionCollection>
-        </Grid.ChildrenTransitions>
-
+    
+    <Grid Margin="19,9.5,19,0">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <!-- Title Panel -->
-        <Grid x:Name="LogoGrid"
-              Height="60"
-              Width="61"
-              Margin="0,0,0,0"
-              Grid.Row="0"
-              VerticalAlignment="Center"
-              HorizontalAlignment="Left"
-              Background="Transparent">
+        <TextBox x:Name="UsernameBox"
+                 Header="login"
+                 MinHeight="66"
+                 Grid.Row="0"
+                 Text="{Binding Username, Mode=TwoWay}"
+                 Loaded="UsernameBox_Loaded"
+                 TextChanged="UsernameBox_TextChanged"
+                 Style="{StaticResource UsernameStyle}">
+            <TextBox.HeaderTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding}"
+                               Foreground="{ThemeResource LoginHeaderForeground}"/>
+                </DataTemplate>
+            </TextBox.HeaderTemplate>
+        </TextBox>
 
-            <Grid x:Name="Logo"
-                  Margin="15,10,0,10">
-                <Path Data="M157.9 210H83.4c-18.9-2-39.1-2.8-55.8-12.9c-15.8-9.7-23.8-28.2-24.8-46.2C0.2 113.1-3.7 73.7 7.6 37    C18.5 7.4 52.8 1.4 80.4 0l76.5 0c20.2 2.2 42.4 2.6 59.2 15.5c20.8 15.7 21.8 43.6 23.5 67.3v51.5c-1.5 22.3-4.8 48.2-25.1 61.6    C198.1 207.6 177.2 208 157.9 210z M166.2 181.6c13.4-0.9 29.5-2 37.9-14.2c7.8-12.6 8.2-28.1 9-42.5c0.2-23.3 1.6-46.9-3.6-69.8    c-2.7-17.6-20.7-26.2-36.9-26.3C134.7 27.1 96.5 26 58.7 30c-16.3 0.8-27.9 15-29.6 30.6c-3.2 22-2.3 44.3-2 66.4    c0.6 15.1 1.3 31.9 11.4 44.1c10.2 10.1 25.6 9.8 38.9 10.8C107.1 182.7 136.7 182.9 166.2 181.6z"
-                  x:Name="Mirko_O"
-                  Fill="{ThemeResource LogoFill}"
-                  Height="38"
-                  Width="44"
-                  Stretch="Uniform">
-                </Path>
-
-                <Path Data="M111.8 161.7c-9.4 4.6-18.6 9.4-28.1 13.6c-14-27.9-27.7-56-41.3-84.1C79.7 72.6 117.2 54.4 154.6 36   c14 27.9 27.6 56.1 41.4 84.1c-9.3 5-18.7 9.5-28.2 14c-11.6-23.2-22.9-46.6-34.4-69.8c-4.6 2.1-9.2 4.3-13.7 6.7   c11.4 23.3 23 46.5 34.2 69.9c-9.3 4.8-18.7 9.3-28.2 13.9c-11.5-23.2-22.8-46.6-34.4-69.8c-4.6 2-9.1 4.2-13.6 6.4   C88.6 115 100.9 138 111.8 161.7z"
-                  x:Name="Mirko_M"
-                  Fill="{ThemeResource LogoFill}"
-                  Height="28"
-                  Width="32"
-                  Stretch="Uniform">
-                </Path>
-            </Grid>
-
-        </Grid>
-
-        <!--TODO: Content should be placed within the following grid-->
-        <Grid Grid.Row="1" x:Name="ContentRoot" Margin="19,9.5,19,0">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto" />
-            </Grid.RowDefinitions>
-
-            <TextBox x:Name="UsernameBox"
-                     Header="login"
+        <PasswordBox x:Name="PasswordBox"
                      MinHeight="66"
-                     Grid.Row="0"
-                     Text="{Binding Username, Mode=TwoWay}"
-                     Loaded="UsernameBox_Loaded"
-                     TextChanged="UsernameBox_TextChanged"
-                     Style="{StaticResource UsernameStyle}">
-                <TextBox.HeaderTemplate>
-                    <DataTemplate>
-                        <TextBlock Text="{Binding}"
-                                   Foreground="{ThemeResource LoginHeaderForeground}"/>
-                    </DataTemplate>
-                </TextBox.HeaderTemplate>
-            </TextBox>
+                     Grid.Row="1"
+                     Header="hasło"
+                     Password="{Binding Password, Mode=TwoWay}"
+                     PasswordChanged="PasswordBox_PasswordChanged"
+                     Style="{StaticResource PasswordBoxStyle1}">
+            <PasswordBox.HeaderTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding}"
+                               Foreground="{ThemeResource LoginHeaderForeground}"/>
+                </DataTemplate>
+            </PasswordBox.HeaderTemplate>
+        </PasswordBox>
 
-            <PasswordBox x:Name="PasswordBox"
-                         MinHeight="66"
-                         Grid.Row="1"
-                         Header="hasło"
-                         Password="{Binding Password, Mode=TwoWay}"
-                         PasswordChanged="PasswordBox_PasswordChanged"
-                         Style="{StaticResource PasswordBoxStyle1}">
-                <PasswordBox.HeaderTemplate>
-                    <DataTemplate>
-                        <TextBlock Text="{Binding}"
-                                   Foreground="{ThemeResource LoginHeaderForeground}"/>
-                    </DataTemplate>
-                </PasswordBox.HeaderTemplate>
-            </PasswordBox>
-
-        </Grid>
     </Grid>
 </UserControl>
