--- a/Mirko_v2/Mirko_v2.WindowsPhone/Pages/HashtagEntriesPage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Pages/HashtagEntriesPage.xaml
@@ -130,11 +130,9 @@
                                Fill="Transparent" />
 
                     <TextBlock x:Name="NoItemsTB"
+                               Style="{StaticResource TextBlockNoItems}"
                                Margin="0,8,0,0"
                                Text="Brak wpisów."
-                               FontSize="18"
-                               FontWeight="Light"
-                               Foreground="LightGray"
                                Visibility="{Binding TaggedEntries.HasNoItems, Converter={StaticResource BoolToVisibility}}"/>
                 </StackPanel>
             </ListView.Header>
