--- a/Mirko_v2/Mirko_v2.WindowsPhone/Pages/SettingsPage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Pages/SettingsPage.xaml
@@ -8,8 +8,6 @@
     xmlns:i="using:Microsoft.Xaml.Interactivity"
     xmlns:core="using:Microsoft.Xaml.Interactions.Core"
     mc:Ignorable="d"
-    d:DesignHeight="300"
-    d:DesignWidth="400"
     Background="{ThemeResource SettingsBackground}"
     DataContext="{Binding Settings, Mode=OneWay, Source={StaticResource Locator}}">
     
@@ -66,7 +64,6 @@
                              Content="#tylkodzienny"
                              FontFamily="Segoe"
                              FontSize="20"
-                             Command="{Binding SaveCommand}"
                              IsChecked="{Binding NightMode, Mode=TwoWay, Converter={StaticResource BoolInverter}}"
                              Foreground="{ThemeResource RadioButtonForeground}"
                              Style="{StaticResource RadioButtonStyle1}"/>
@@ -76,7 +73,6 @@
                              Content="#tylkonocny"
                              FontFamily="Segoe"
                              FontSize="20"
-                             Command="{Binding SaveCommand}"
                              IsChecked="{Binding NightMode, Mode=TwoWay}"
                              Foreground="{ThemeResource RadioButtonForeground}"
                              Style="{StaticResource RadioButtonStyle1}" />
@@ -84,6 +80,7 @@
                 <StackPanel Margin="0,12,19,72">
                     <Slider x:Name="ScaleSlider"
                             Header="Rozmiar tekstu wpisów"
+                            Value="{Binding FontScaleFactor, Mode=TwoWay}"
                             Minimum="1.0"
                             SnapsTo="StepValues"
                             StepFrequency="0.125"
@@ -111,7 +108,7 @@
                     -->
 
                     <ToggleSwitch x:Name="EnablePush"
-                                  IsOn="{Binding UserInfo.IsPushEnabled}"
+                                  IsOn="{Binding UserInfo.IsPushEnabled, Mode=TwoWay}"
                                   OffContent="Pseudo-push"
                                   OnContent="Pseudo-push"
                                   OnContentTemplate="{StaticResource ToggleSwitchTemplate}"
@@ -119,7 +116,7 @@
 
                     <ToggleSwitch x:Name="OnlyWIFI"
                                   Margin="0,20,0,0"
-                                  IsOn="{Binding OnlyWIFIDownload}"
+                                  IsOn="{Binding OnlyWIFIDownload, Mode=TwoWay}"
                                   OffContent="Pobieraj obrazy tylko przez Wi-Fi"
                                   OnContent="Pobieraj obrazy tylko przez Wi-Fi"
                                   OnContentTemplate="{StaticResource ToggleSwitchTemplate}"
@@ -127,22 +124,19 @@
 
                     <ToggleSwitch x:Name="ShowPlus18"
                                   Margin="0,20,0,0"
-                                  IsOn="{Binding ShowPlus18}"
+                                  IsOn="{Binding ShowPlus18, Mode=TwoWay}"
                                   OffContent="Pokazuj treści 18+"
                                   OnContent="Pokazuj treści 18+" 
                                   OnContentTemplate="{StaticResource ToggleSwitchTemplate}"
                                   OffContentTemplate="{StaticResource ToggleSwitchTemplate}"/>
 
-                    <!--
-                <ToggleSwitch x:Name="TransparentTile"
-                              Margin="0,20,0,0"
-                              IsOn="True"
-                              IsEnabled="False"
-                              OffContent="Przezroczysty kafelek"
-                              OnContent="Przezroczysty kafelek" 
-                              OnContentTemplate="{StaticResource ToggleSwitchTemplate}"
-                              OffContentTemplate="{StaticResource ToggleSwitchTemplate}" />
-                -->
+                    <ToggleSwitch x:Name="LiveTile"
+                                  Margin="0,20,0,0"
+                                  IsOn="{Binding LiveTile, Mode=TwoWay}"
+                                  OffContent="Livetile"
+                                  OnContent="Livetile" 
+                                  OnContentTemplate="{StaticResource ToggleSwitchTemplate}"
+                                  OffContentTemplate="{StaticResource ToggleSwitchTemplate}"/>
 
                     <Grid Margin="0,20,0,0"
                           HorizontalAlignment="Stretch">
